--- a/css/Bookstylesheet.css
+++ b/css/Bookstylesheet.css
@@ -26,7 +26,7 @@
     text-align: center;
     
     color: rgb(6, 73, 100);
-    font-size: 55px;
+    font-size: 4vw;
 }
 .bookhead4{
     text-align: center;
@@ -66,4 +66,70 @@ th{
 }
 td{
    border: 1px groove black;
+}
+.h3tag{
+    float: left;
+    
+    
+}
+.htmlbook1{
+    background-color: #ebe5d6;
+    
+   
+    overflow: hidden;
+    margin-top: 35px;
+}
+.htmldevice{
+    border: 1 groove rgb(226, 64, 64);
+    border-radius: 10px;
+    background-color: #ebe5d6;
+    width: 80%;
+    margin: 25px;
+    margin-top: 2px;
+   
+
+}
+.htmlparagraph{
+    font-size: 1rem;
+}
+.htmlparagraph1{
+    font-size: 1rem;
+    background-color: rgb(221, 235, 248);
+    border-left: 3px solid rgb(0, 255, 76);
+    padding: 10px;
+    margin: 5px;
+    margin-left: 15px;
+
+}
+.htmlbookhead2{
+    font-size: 2.2vw;
+}
+.table1{
+    width: 100%;
+    margin: 0px;
+    border: none;
+    
+    
+}
+.tr1{
+    border: none;
+}
+.th1{
+    
+    font-size: 1rem;
+}
+.td1{
+    font-size: 1rem;
+}
+.a1{
+    color: rgb(241, 247, 241);
+    border: 2px groove rgb(209, 228, 40);
+    border-radius: 10px;
+    padding:5px;
+    background-color:darkgreen;
+    text-decoration: none;
+}
+.a1:hover{
+    background-color: yellow;
+    color: blue;
 }
