--- a/css/Bookstylesheet.css
+++ b/css/Bookstylesheet.css
@@ -108,6 +108,8 @@ td{
     width: 100%;
     margin: 0px;
     border: none;
+    display:flexbox;
+    
     
     
 }
@@ -115,21 +117,55 @@ td{
     border: none;
 }
 .th1{
-    
+    background-color: rgb(160, 156, 156);
     font-size: 1rem;
+    text-align: left;
+    border: none;
 }
 .td1{
     font-size: 1rem;
+    text-align: left;
+    border: none;
 }
 .a1{
     color: rgb(241, 247, 241);
     border: 2px groove rgb(209, 228, 40);
     border-radius: 10px;
+   
     padding:5px;
     background-color:darkgreen;
     text-decoration: none;
+    float: right;
 }
 .a1:hover{
     background-color: yellow;
     color: blue;
+    
+}
+.aprevleft{
+    color: rgb(241, 247, 241);
+    border: 2px groove rgb(209, 228, 40);
+    border-radius: 10px;
+   
+    padding:5px;
+    background-color:rgb(0, 2, 100);
+    text-decoration: none;
+    margin-top: 35px;
+    float: left;
+}
+.aprevright{
+    color: rgb(241, 247, 241);
+    border: 2px groove rgb(209, 228, 40);
+    border-radius: 10px;
+   
+    padding:5px;
+    background-color:rgb(0, 2, 100);
+    text-decoration: none;
+    margin-top: 35px;
+    float: right;
+
+}
+.aprevleft:hover,.aprevright:hover {
+    background-color: rgb(65, 68, 240);
+    text-decoration: underline;
 }
