--- a/css/practicestyle.css
+++ b/css/practicestyle.css
@@ -11,7 +11,7 @@ div{
     padding: 15px;
 }
 h1{
-    margin: 55px;
+    padding: 15px;
 }
 h2{
     color: rgb(241, 247, 241);
@@ -30,7 +30,13 @@ h2:hover{
 a{
     color: aliceblue;
     text-decoration: none;
+    
 }
 a:hover{
     color: black;
+}
+table{
+    box-sizing: border-box;
+    overflow: hidden;
+    width: auto;
 }
