--- a/css/Bookstylesheet.css
+++ b/css/Bookstylesheet.css
@@ -131,7 +131,7 @@ td{
     color: rgb(241, 247, 241);
     border: 2px groove rgb(209, 228, 40);
     border-radius: 10px;
-   
+   font-size: 12px;
     padding:5px;
     background-color:darkgreen;
     text-decoration: none;
@@ -146,7 +146,7 @@ td{
     color: rgb(241, 247, 241);
     border: 2px groove rgb(209, 228, 40);
     border-radius: 10px;
-   
+    
     padding:5px;
     background-color:rgb(0, 2, 100);
     text-decoration: none;
