--- a/css/startercss.css
+++ b/css/startercss.css
@@ -8,6 +8,7 @@
     
     
     width: 15%;
+    height: 850px;
     
    
     float: left;
@@ -16,6 +17,8 @@
     
     position: sticky;
     top: 50px;
+    overflow: hidden;
+    overflow-y: scroll;
    
 }
 
@@ -66,6 +69,7 @@
 }
 .diva {
    width: 200px;
+   
    margin-left: 5px;
     font-size: 20px;
     float: left;
@@ -73,7 +77,8 @@
    
     text-decoration: none;
     color: rgb(90, 46, 192);
-    overflow:hidden ;
+   
+    
 }
 .sumanchor{
     text-decoration: none;
@@ -97,6 +102,7 @@
      color: aliceblue;
      text-decoration: none;
      border-bottom: 1px inset;
+     
     
     
      
